heros section of home page

--- a/pages/index.html
+++ b/pages/index.html
@@ -115,6 +115,33 @@
         </div>
     </div>
 
+    <!-- hero section -->
+    <main class="main-hero">
+        <div class="main-hero-title">
+            <div class="main-hero-title-inner">
+                <div class="animation-main-title-container">
+                    <h1 class="animation-title main-title">
+                        DA Vatti
+                    </h1>
+                </div>
+                <div class="animation-sub-container">
+                    <h3 class="animation-sub main-sub">
+                        Authentic Nepalese & Indian Cuisine: Experience unique and tasty dish serve from underground.
+                    </h3>
+                </div>
+                <div class="btn-animation">
+                    <a href="menu.html" class="btn btn-primary">Our Menu</a>
+                </div>
+            </div>
+        </div>
+        <div class="home-image-1">
+            <img src="../images/momos-heor.jpg" alt="">
+        </div>
+        <div class="home-image-2">
+            <img src="../images/home-page2.jpg" alt="">
+        </div>
+    </main>
+
     <script src="../js/app.js"></script>
 </body>
 
