--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Montserrat&family=Poppins&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Restaurant Website</title>
 </head>
 
@@ -27,7 +27,7 @@
         <nav class="nav-bar">
             <div class="logo">
                 <a href="index.html">
-                    <img src="../images/logo.png" alt="logo" width="180px" height="50px" />
+                    <img src="./images/logo.png" alt="logo" width="180px" height="50px" />
                 </a>
             </div>
 
@@ -42,7 +42,7 @@
     <!-- MENU CONTENT -->
     <div class="menuContent">
         <div class="menuLogo">
-            <img src="../images/logo.png" alt="" width="180px" height="50px">
+            <img src="./images/logo.png" alt="" width="180px" height="50px">
         </div>
         <div class="menu-links">
             <ul class="menuLinks">
@@ -52,7 +52,7 @@
                 <li class="fadeLink"><a href="contact.html">Reservations</a></li>
             </ul>
             <div class="menuContent-img">
-                <img src="../images/menuContent.jpg" alt="">
+                <img src="./images/menuContent.jpg" alt="">
                 <div class="imgBefore"></div>
                 <div class="smallLinks">
                     <li class="fadeLink"><a href="about.html">Our Story</a></li>
@@ -111,7 +111,7 @@
 
         <div class="closeBtn">
             <span>Close</span>
-            <img src="../images/close-btn.svg" alt="" />
+            <img src="./images/close-btn.svg" alt="" />
         </div>
     </div>
 
@@ -135,14 +135,60 @@
             </div>
         </div>
         <div class="home-image-1">
-            <img src="../images/momos-heor.jpg" alt="">
+            <img src="./images/momos-heor.jpg" alt="">
         </div>
         <div class="home-image-2">
-            <img src="../images/home-page2.jpg" alt="">
+            <img src="./images/home-page2.jpg" alt="">
         </div>
-    </main>
+    </main> 
 
-    <script src="../js/app.js"></script>
+    <!-- our servings service -->
+    <section id="we-serve" class="light-body">
+<div class="container js-scroll fade-in-bottom">
+    <h2 class="section-title">We Serve</h2>
+    <div class="serve-container">
+        <a href="menu.html" class="serve-card">
+            <img src="./images/serve/breakfast.jpg" alt="" class="border-radius-img">
+            <div class="serve-category">
+                <span>Breakfast</span>
+            </div>
+        </a>
+        <a href="menu.html" class="serve-card">
+            <img src="./images/serve/lunch.jpg" alt="" class="border-radius-img">
+            <div class="serve-category">
+                <span>Lunch</span>
+            </div>
+        </a>
+        <a href="menu.html" class="serve-card">
+            <img src="./images/serve/dinner.jpg" alt="" class="border-radius-img">
+            <div class="serve-category">
+                <span>Dinner</span>
+            </div>
+        </a>
+        <a href="menu.html" class="serve-card">
+            <img src="./images/serve/dessert.jpg" alt="" class="border-radius-img">
+            <div class="serve-category">
+                <span>Desserts</span>
+            </div>
+        </a>
+        <a href="menu.html" class="serve-card">
+            <img src="./images/serve/snacks.jpg" alt="" class="border-radius-img">
+            <div class="serve-category">
+                <span>Snacks</span>
+            </div>
+        </a>
+        <a href="menu.html" class="serve-card">
+            <img src="./images/serve/drink.jpg" alt="" class="border-radius-img">
+            <div class="serve-category">
+                <span>Drinks</span>
+            </div>
+        </a>
+
+    </div>
+</div>
+    </section>
+
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
