--- a/index.html
+++ b/index.html
@@ -188,6 +188,51 @@
 </div>
     </section>
 
+    <!-- RESERVATIONS -->
+    <div class="book-a-reservation">
+        <div class="book-reservation-content js-scroll fade-in-bottom">
+            <h2 class="book">Book a reservation</h2>
+            <a href="contact.html" class="btn btn-primary book-btn"> Book a table</a>
+        </div>
+    </div>
+    
+    <!-- ABOUT US -->
+    <div class="container about">
+        <section id="home-about" class="js-scroll fade-in-bottom">
+            <h2 class="section-title">About Us</h2>
+            <h4 class="section-sub">
+                since 1987
+                <div class="dot">
+                </div>
+            </h4>
+            <main class="home-about-content">
+                <div class="home-about-text row">
+                    <p class="sm-text">
+                        "Real cooking is more about following your heart than following recipes."
+                    </p>
+                    <p class="sm-text paragraph">- Unknown</p>
+                    <p class="paragraph sm-text">
+                        DA Vatti restaurant established on January 10th, 1987 in Sydney, Australia. It was founded by _____. The restaurant was named DA Vatti because of sauniko ko vatti, famous place for local alcohol product among locals.
+                    </p>
+                    <a href="about.html" class="link">Read More</a>
+                </div>
+                <div class="home-about-img row">
+                    <img src="./images/about.jpeg" alt="">
+                </div>
+            </main>
+        </section>
+    </div>
+
+    <!-- PROFESSIONALS -->
+
+    <!-- GALLERY -->
+
+    <!-- TESTIMONIALS -->
+
+    <!-- BANNER -->
+
+    <!-- FOOTER -->
+
     <script src="./js/app.js"></script>
 </body>
 
