--- a/index.html
+++ b/index.html
@@ -224,6 +224,50 @@
     </div>
 
     <!-- PROFESSIONALS -->
+    <section id="professionals" class="light-body">
+        <div class="container">
+            <div class="professional-content js-scroll fade-in-bottom">
+                <div class="professional-text row">
+                    <h2 class="md-title">Our professionals</h2>
+                    <p class="sm-text paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates quasi, vitae deleniti at aspernatur nobis id molestiae fugit inventore perspiciatis temporibus repudiandae. Quae veritatis corrupti error! Exercitationem quos error labore!
+                    </p>
+                    <a href="about.html" class="link">Show More</a>
+                </div>
+                <div class="professional-img row">
+                    <div class="professional-1 professionals">
+                        <div class="prof-img-container">
+                            <div class="prof-img">
+                                <img src="./images/professionals/prof-2.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="prof-detail">
+                            <h3 class="prof-name">Sonam Ghaley</h3>
+                            <p class="prof-category paragraph">Co-found, Chef</p>
+                            <p class="prof-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi soluta maiores eum numquam culpa tempora saepe nam autem tempore. Explicabo rerum nesciunt placeat incidunt! Similique corporis quisquam repellendus ipsam.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="professional-2 professionals">
+                        <div class="prof-img-container">
+                            <div class="prof-img">
+                                <img src="./images/professionals/shePro.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="prof-detail">
+                            <h3 class="prof-name">Sonam Ghaley</h3>
+                            <p class="prof-category paragraph">Co-found, Chef</p>
+                            <p class="prof-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia sequi soluta maiores eum numquam culpa tempora saepe nam autem tempore. Explicabo rerum nesciunt placeat incidunt! Similique corporis quisquam repellendus ipsam.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- GALLERY -->
 
