--- a/index.html
+++ b/index.html
@@ -270,13 +270,179 @@
     </section>
 
     <!-- GALLERY -->
+    <section id="home-gallery">
+        <div class="container js-scroll fade-in-bottom">
+            <h2 class="section-title">Our Gallery</h2>
+            <div class="home-gallery-content">
+                <a href="gallery.html">
+                    <div class="home-gallery-card">
+                        <img src="./images/gallery/res-interior.jpg" alt="">
+                        <span>Interior</span>
+                    </div>
+                </a>
+                <a href="gallery.html">
+                    <div class="home-gallery-card">
+                        <img src="./images/gallery/gall-food.jpg" alt="">
+                        <span>Food</span>
+                    </div>
+                </a>
+
+                <div class="home-gallery-card">
+                    <img src="./images/gallery/customers.jpg" alt="">
+                    <span>Customer</span>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- TESTIMONIALS -->
+    <div class="container">
+        <section id="testimonials" class="js-scroll fade-in-bottom">
+            <h2 class="section-title">Testimonials</h2>
+
+        <div class="carousel-wrapper">
+            <div class="carousel">
+                <ul class="carousel-container">
+                    <li class="carousel-item">
+                        <div class="testimonial">
+                            <div class="testimonial-content">
+                                <q class="paragraph sm-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium libero eum illum ratione aspernatur voluptate vitae voluptas natus animi beatae, eligendi culpa aliquid officia laborum architecto numquam iste sunt quos.
+                                </q>
+                            </div>
+                            <div class="testimonial-user">
+                                <div class="user">
+                                    <img src="./images/testimonials/user1.jpg" alt="">
+                                </div>
+                                <span class="user-name">
+                                    Bishal Karki, <span>
+                                        Loyal Customer
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="carousel-item">
+                        <div class="testimonial">
+                            <div class="testimonial-content">
+                                <q class="paragraph sm-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium libero eum illum ratione aspernatur voluptate vitae voluptas natus animi beatae, eligendi culpa aliquid officia laborum architecto numquam iste sunt quos.
+                                </q>
+                            </div>
+                            <div class="testimonial-user">
+                                <div class="user">
+                                    <img src="./images/testimonials/user3.jpg" alt="">
+                                </div>
+                                <span class="user-name">
+                                    Bishal Karki, <span>
+                                        Loyal Customer
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="carousel-item">
+                        <div class="testimonial">
+                            <div class="testimonial-content">
+                                <q class="paragraph sm-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium libero eum illum ratione aspernatur voluptate vitae voluptas natus animi beatae, eligendi culpa aliquid officia laborum architecto numquam iste sunt quos.
+                                </q>
+                            </div>
+                            <div class="testimonial-user">
+                                <div class="user">
+                                    <img src="./images/testimonials/user4.jpg" alt="">
+                                </div>
+                                <span class="user-name">
+                                    Bishal Karki, <span>
+                                        Loyal Customer
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                     <li class="carousel-item">
+                        <div class="testimonial">
+                            <div class="testimonial-content">
+                                <q class="paragraph sm-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium libero eum illum ratione aspernatur voluptate vitae voluptas natus animi beatae, eligendi culpa aliquid officia laborum architecto numquam iste sunt quos.
+                                </q>
+                            </div>
+                            <div class="testimonial-user">
+                                <div class="user">
+                                    <img src="./images/testimonials/user5.jpg" alt="">
+                                </div>
+                                <span class="user-name">
+                                    Bishal Karki, <span>
+                                        Loyal Customer
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                     <li class="carousel-item">
+                        <div class="testimonial">
+                            <div class="testimonial-content">
+                                <q class="paragraph sm-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium libero eum illum ratione aspernatur voluptate vitae voluptas natus animi beatae, eligendi culpa aliquid officia laborum architecto numquam iste sunt quos.
+                                </q>
+                            </div>
+                            <div class="testimonial-user">
+                                <div class="user">
+                                    <img src="./images/testimonials/user6.jpg" alt="">
+                                </div>
+                                <span class="user-name">
+                                    Bishal Karki, <span>
+                                        Loyal Customer
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                     <li class="carousel-item">
+                        <div class="testimonial">
+                            <div class="testimonial-content">
+                                <q class="paragraph sm-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium libero eum illum ratione aspernatur voluptate vitae voluptas natus animi beatae, eligendi culpa aliquid officia laborum architecto numquam iste sunt quos.
+                                </q>
+                            </div>
+                            <div class="testimonial-user">
+                                <div class="user">
+                                    <img src="./images/testimonials/user7.jpg" alt="">
+                                </div>
+                                <span class="user-name">
+                                    Bishal Karki, <span>
+                                        Loyal Customer
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <ul class="carousel-pagination">
+                <li class="carousel-bullet"></li>
+                <li class="carousel-bullet"></li>
+                <li class="carousel-bullet"></li>
+                <li class="carousel-bullet"></li>
+                <li class="carousel-bullet"></li>
+            </ul>
+        </div>
+        </section>
+    </div>
 
     <!-- BANNER -->
+    <section id="banner" class="overlay js-scroll fade-in-bottom">
+        <h2 class="banner-text">
+            extraodinary <br />
+            and unique setting
+        </h2>
+    </section>
 
     <!-- FOOTER -->
 
+
+    <script src="./js/testimonial.js"></script>
     <script src="./js/app.js"></script>
 </body>
 
