menu page completed

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -48,7 +48,7 @@
         <div class="menu-links">
             <ul class="menuLinks">
                 <li class="fadeLink"><a href="index.html">Home</a></li>
-                <li class="fadeLink"><a href="./pages/menu.html">Menu</a></li>
+                <li class="fadeLink"><a href="./menu.html">Menu</a></li>
                 <li class="fadeLink"><a href="delivery.html">Delivery</a></li>
                 <li class="fadeLink"><a href="contact.html">Reservations</a></li>
             </ul>
