--- a/pages/menu.html
+++ b/pages/menu.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu - NAMASTE</title>
+    <title>Menu - NAMASTE 🙏</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -47,18 +47,18 @@
         </div>
         <div class="menu-links">
             <ul class="menuLinks">
-                <li class="fadeLink"><a href="index.html">Home</a></li>
+                <li class="fadeLink"><a href="../index.html">Home</a></li>
                 <li class="fadeLink"><a href="./menu.html">Menu</a></li>
-                <li class="fadeLink"><a href="delivery.html">Delivery</a></li>
-                <li class="fadeLink"><a href="contact.html">Reservations</a></li>
+                <li class="fadeLink"><a href="./delivery.html">Delivery</a></li>
+                <li class="fadeLink"><a href="./contact.html">Reservations</a></li>
             </ul>
             <div class="menuContent-img">
                 <img src="../images/menuContent.jpg" alt="">
                 <div class="imgBefore"></div>
                 <div class="smallLinks">
-                    <li class="fadeLink"><a href="about.html">Our Story</a></li>
-                    <li class="fadeLink"><a href="gallery.html">Gallery</a></li>
-                    <li class="fadeLink"><a href="content.html">Contact</a></li>
+                    <li class="fadeLink"><a href="./about.html">Our Story</a></li>
+                    <li class="fadeLink"><a href="./gallery.html">Gallery</a></li>
+                    <li class="fadeLink"><a href="./content.html">Contact</a></li>
                     <div class="socialMenu">
                         <li class="fadeLink"><a href="https://facebook.com/">
                                 <i class="fab fa-facebook-f"></i>
@@ -76,22 +76,22 @@
                 <li class="mobile-fade mobile-link"><a href="../index.html">Home</a></li>
                 <li class="mobile-fade mobile-link"><a href="./menu.html">Menu</a></li>
                 <li class="mobile-fade mobile-link">
-                    <a href="delivery.html">Delivery</a>
+                    <a href="./delivery.html">Delivery</a>
                 </li>
                 <li class="mobile-fade mobile-link">
-                    <a href="contact.html">Reservations</a>
+                    <a href="./contact.html">Reservations</a>
                 </li>
             </ul>
 
             <div class="mobileSmallLinks">
                 <li class="mobile-fade mobile-link">
-                    <a href="about.html">Our Story</a>
+                    <a href="./about.html">Our Story</a>
                 </li>
                 <li class="mobile-fade mobile-link">
-                    <a href="gallery.html">Gallery</a>
+                    <a href="./gallery.html">Gallery</a>
                 </li>
                 <li class="mobile-fade mobile-link">
-                    <a href="contact.html">Contact</a>
+                    <a href="./contact.html">Contact</a>
                 </li>
             </div>
 
@@ -107,7 +107,7 @@
 
         <div class="sideContent">
             &copy;
-            <span>Da Vatti</span> 2021
+            <span>NAMASTE 🙏</span> 2021
         </div>
 
         <div class="closeBtn">
