--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delivery - NAMASTE 🙏</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact - NAMASTE 🙏</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,8 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Montserrat&family=Poppins&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="../styles/delivery.css">
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/delivery.css">
+    <link rel="stylesheet" href="../styles/contact.css">
 </head>
 
 <body>
@@ -116,181 +117,113 @@
         </div>
     </div>
 
-    <!-- DELIVERY MAIN CONTENT -->
-    <main class="delivery-hero delivery-section">
-        <h2 class="sub-title">NAMASTE 🙏 <span>Delivery</span></h2>
-        <h1 class="main-title">
-            Discover restaurant <br>
-            delivery near you
-        </h1>
+    <!-- RESERVATIONS -->
+    <main class="contact-section container">
+        <div class="contact-reservation">
 
-        <form action="display.html" method="get" id="select-restaurant">
-            <div class="select-restaurant">
-
-                <div class="options-container category-container">
-                    <option value="Sydney" class="option" type="radio" class="radio" id="sydney" name="sydney">
-                        <label for="sydney">Sydney, Australia</label>
-                    </option>
-
-                    <option value="Melbourne" class="option" type="radio" class="radio" id="melbourne" name="melbourne">
-                        <label for="melbourne">Melbourne, Australia</label>
-                    </option>
-
-                    <option value="Brisbane" class="option" type="radio" class="radio" id="brisbane" name="brisbane">
-                        <label for="brisbane">Brisbane, Australia</label>
-                    </option>
-
-                    <option value="Perth" class="option" type="radio" class="radio" id="perth" name="perth">
-                        <label for="perth">Perth, Australia</label>
-                    </option>
-
-                    <option value="Kathmandu" class="option" type="radio" class="radio" id="kathmandu" name="kathmandu">
-                        <label for="kathmandu">Kathmandu, Nepal</label>
-                    </option>
-                </div>
-
-                <div class="selected">
-                    <span id="choose-restaurant" name="select">
-                        Choose a restaurant
-                    </span>
-                </div>
-
-                <div class="find-restaurant-btn">
-                    <button id="btn" type="submit">
-                        <div class="restau-btn-img del-img">
-                            <img src="../images/icons/scooter.svg" alt="">
+            <!-- contact -->
+            <div class="contact-content">
+                <h2 class="contact-title">Get in touch</h2>
+                <p class="contact-sub">
+                    Fill up the form and our team will get back to you as soon as possible.
+                </p>
+                <div class="form-container">
+                    <form action="#" class="contact-form">
+                        <div class="contact-flex">
+                            <div class="input-field">
+                                <input type="text" required>
+                                <label>First Name</label>
+                            </div>
+                            <div class="input-field">
+                                <input type="text" required>
+                                <label>Last Name</label>
+                            </div>
                         </div>
-                        <div class="restaurant-btn-text" value="Submit" onclick="passValue()">
-                            Find delivery in <span id="restaurant-name"></span>
+                        <div class="contact-flex">
+                            <div class="input-field">
+                                <input type="text" required>
+                                <label>Email Address</label>
+                            </div>
+                            <div class="input-field">
+                                <input type="text" required>
+                                <label>Phone Number</label>
+                            </div>
                         </div>
-                    </button>
+                        <div class="input-field">
+                            <input type="text" required id="contact-message" name="text-area" class="text-area"
+                                autocomplete="off">
+                            <label>Message</label>
+                        </div>
+                        <div class="contactBtn">
+                            <button id="contactBtn" type="Submit">Send Message</button>
+                        </div>
+                    </form>
                 </div>
-
             </div>
-        </form>
 
-        <div class="delivery-main-image del-img">
-            <img src="../images/delivery/delivery-main-image.jpg" alt="">
-        </div>
+            <!-- reservation -->
+            <div class="reservation-content">
+                <h2 class="contact-title">Reserve a table</h2>
+                <form action="#" class="reserve-inputs-container">
+                    <div class="reserve-input-field">
+                        <input type="text" required placeholder="Name">
+                    </div>
+                    <div class="reserve-input-field">
+                        <input type="text" required placeholder="Email">
+                    </div>
+                    <div class="reserve-input-field">
+                        <input type="date" name="date" required>
+                    </div>
+                    <div class="reserve-input-field">
+                        <select name="time" id="time">
+                            <option value="time">Time</option>
+                            <option value="time">12:00 PM</option>
+                            <option value="time">12:30 PM</option>
+                            <option value="time">1:00 PM</option>
+                            <option value="time">1:30 PM</option>
+                            <option value="time">2:00 PM</option>
+                            <option value="time">2:30 PM</option>
+                            <option value="time">3:00 PM</option>
+                            <option value="time">3:30 PM</option>
+                            <option value="time">4:00 PM</option>
+                            <option value="time">4:30 PM</option>
+                            <option value="time">5:00 PM</option>
+                            <option value="time">5:30 PM</option>
+                            <option value="time">6:00 PM</option>
+                            <option value="time">6:30 PM</option>
+                            <option value="time">7:00 PM</option>
+                            <option value="time">7:30 PM</option>
+                            <option value="time">8:00 PM</option>
+                            <option value="time">8:30 PM</option>
+                            <option value="time">9:00 PM</option>
+                            <option value="time">9:30 PM</option>
+                            <option value="time">10:00 PM</option>
+                            <option value="time">10:30 PM</option>
+                            <option value="time">11:00 PM</option>
+                            <option value="time">11:30 PM</option>
+                        </select>
+                    </div>
+                    <div class="reserve-input-field">
+                        <select name="people" id="people">
+                            <option value="people">People</option>
+                            <option value="people">1</option>
+                            <option value="people">2</option>
+                            <option value="people">3</option>
+                            <option value="people">4</option>
+                            <option value="people">5</option>
+                            <option value="people">6</option>
+                            <option value="people">7</option>
+                            <option value="people">8</option>
+                            <option value="people">9</option>
+                            <option value="people">10</option>
+                        </select>
+                    </div>
 
-        <div class="delivery-main-image-1 del-img">
-            <img src="../images/delivery/delivery-main-image-1.jpg" alt="">
+                    <button class="reservationBtn">Book now</button>
+                </form>
+            </div>
         </div>
     </main>
-
-    <!-- DELIVERY APP -->
-    <section class="light-body" id="delivery-app">
-        <div id="delivery-app-header">
-            <div class="delivery-app-text">
-                <h2 class="delivery-app-title">
-                    There's more to Love in the App.
-                </h2>
-            </div>
-
-            <div class="delivery-os-icons">
-                <a href="#" class="os-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18.763" height="22.328" viewBox="0 0 18.763 22.328">
-                        <path id="apple-brands"
-                            d="M19.687,43.8a4.654,4.654,0,0,1,2.492-4.227,5.356,5.356,0,0,0-4.222-2.223c-1.77-.14-3.7,1.032-4.412,1.032-.748,0-2.462-.982-3.808-.982C6.956,37.443,4,39.617,4,44.038a12.424,12.424,0,0,0,.718,4.048c.638,1.829,2.941,6.316,5.344,6.241,1.256-.03,2.143-.892,3.778-.892,1.585,0,2.408.892,3.808.892,2.423-.035,4.506-4.112,5.114-5.947A4.941,4.941,0,0,1,19.687,43.8Zm-2.821-8.185A4.7,4.7,0,0,0,18.062,32a5.286,5.286,0,0,0-3.385,1.74A4.768,4.768,0,0,0,13.4,37.324,4.186,4.186,0,0,0,16.866,35.614Z"
-                            transform="translate(-4 -32)" />
-                    </svg>
-                    <span>Apple</span>
-                </a>
-                <a href="#" class="os-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="17.675" height="22.328" viewBox="0 0 17.675 22.328">
-                        <g id="android" transform="translate(-53.35 0.001)">
-                            <g id="Group_1289" data-name="Group 1289" transform="translate(57.071 8.373)">
-                                <g id="Group_1288" data-name="Group 1288" transform="translate(0)">
-                                    <path id="Path_1278" data-name="Path 1278"
-                                        d="M148.451,192.034h-9.3a.465.465,0,0,0-.465.465v7.442a2.33,2.33,0,0,0,1.861,2.279v2.372a1.4,1.4,0,1,0,2.791,0v-2.326h.93v2.326a1.4,1.4,0,1,0,2.791,0V202.22a2.329,2.329,0,0,0,1.861-2.279V192.5A.465.465,0,0,0,148.451,192.034Z"
-                                        transform="translate(-138.683 -192.034)" />
-                                </g>
-                            </g>
-                            <g id="Group_1291" data-name="Group 1291" transform="translate(57.071 -0.001)">
-                                <g id="Group_1290" data-name="Group 1290" transform="translate(0 0)">
-                                    <path id="Path_1279" data-name="Path 1279"
-                                        d="M146.235,2.478l.784-1.83a.465.465,0,1,0-.855-.366l-.784,1.831a5.069,5.069,0,0,0-3.157,0L141.437.283a.464.464,0,1,0-.854.366l.784,1.83a5.12,5.12,0,0,0-2.683,4.5.465.465,0,0,0,.465.465h9.3a.465.465,0,0,0,.465-.465A5.121,5.121,0,0,0,146.235,2.478Zm-4.3,3.1a.465.465,0,1,1,.465-.465A.465.465,0,0,1,141.94,5.583Zm3.721,0a.465.465,0,1,1,.465-.465A.465.465,0,0,1,145.661,5.583Z"
-                                        transform="translate(-138.684 0.001)" />
-                                </g>
-                            </g>
-                            <g id="Group_1293" data-name="Group 1293" transform="translate(68.234 8.373)">
-                                <g id="Group_1292" data-name="Group 1292" transform="translate(0)">
-                                    <path id="Path_1280" data-name="Path 1280"
-                                        d="M396.079,192.034a1.4,1.4,0,0,0-1.4,1.4v4.651a1.4,1.4,0,1,0,2.791,0v-4.651A1.4,1.4,0,0,0,396.079,192.034Z"
-                                        transform="translate(-394.684 -192.034)" />
-                                </g>
-                            </g>
-                            <g id="Group_1295" data-name="Group 1295" transform="translate(53.35 8.373)">
-                                <g id="Group_1294" data-name="Group 1294" transform="translate(0)">
-                                    <path id="Path_1281" data-name="Path 1281"
-                                        d="M54.745,192.034a1.4,1.4,0,0,0-1.4,1.4v4.651a1.4,1.4,0,0,0,2.791,0v-4.651A1.4,1.4,0,0,0,54.745,192.034Z"
-                                        transform="translate(-53.35 -192.034)" />
-                                </g>
-                            </g>
-                        </g>
-                    </svg>
-                    <span>Android</span>
-                </a>
-            </div>
-        </div>
-    </section>
-
-    <!-- DELIVERY APP PROCESS -->
-    <div class="delivery-app-process">
-        <div class="delivery-card">
-            <div class="delivery-image">
-                <img src="../images/delivery/app-processes/set-location.svg" alt="">
-            </div>
-            <div class="delivery-card-text">
-                <h3>Set your location</h3>
-            </div>
-        </div>
-
-        <div class="delivery-card">
-            <div class="delivery-image">
-                <img src="../images/delivery/app-processes/choose-restaurant.jpg" alt="">
-            </div>
-            <div class="delivery-card-text">
-                <h3>Choose a restaurant</h3>
-            </div>
-        </div>
-
-        <div class="delivery-card">
-            <div class="delivery-image">
-                <img src="../images/delivery/app-processes/choose-food.svg" alt="">
-            </div>
-            <div class="delivery-card-text">
-                <h3>Choose the food you love</h3>
-            </div>
-        </div>
-
-        <div class="delivery-card">
-            <div class="delivery-image">
-                <img src="../images/delivery/app-processes/fast-delivery.jpg" alt="">
-            </div>
-            <div class="delivery-card-text">
-                <h3>Fast Delivery</h3>
-            </div>
-        </div>
-
-        <div class="delivery-card">
-            <div class="delivery-image">
-                <img src="../images/delivery/app-processes/payment.jpg" alt="">
-            </div>
-            <div class="delivery-card-text">
-                <h3>Easy Payment</h3>
-            </div>
-        </div>
-
-        <div class="delivery-card">
-            <div class="delivery-image">
-                <img src="../images/delivery/app-processes/enjoy.svg" alt="">
-            </div>
-            <div class="delivery-card-text">
-                <h3>Enjoy your food</h3>
-            </div>
-        </div>
-    </div>
 
     <!-- LOCATIONS -->
     <section class="light-body" id="location">
@@ -641,10 +574,8 @@
 
     </footer>
 
-
-    <!-- js -->
+    <!-- JAVASCRIPT -->
     <script src="../js/app.js"></script>
-    <script src="../js/delivery.js"></script>
 </body>
 
 </html>
